package games.bambooInvaders;

public class Dino {
	
	private int bambooCounter;
	private int actionCountdown;
	private int i;
	private int j;
	
	
}
